--- a/index.html
+++ b/index.html
@@ -45,7 +45,8 @@
     <div class="main">
         <p class="cont">العبيد لله</p>
         <div class="card">
-            <img src="img/محمد حسن.png" alt="">
+            <img src="img/محمد حسن.png" alt="" style="position: relative;
+    left: 30px;">
             <div class="text">
                 <h4>محمد حسن</h4>
                 <p class="black">اسود</p>
@@ -78,6 +79,26 @@
                 <h4>مجيد</h4>
                 <p class="white">ابيض</p>
                 <p>بعرف يلعب روكت</p>
+                <span>السعر : 500 ريال</span>
+            </div>
+        </div>
+        <div class="card">
+            <img src="img/صلاح.png" alt="" style="transform: rotate(16deg);
+    position: relative;
+    top: 20px;">
+            <div class="text">
+                <h4>صلاح</h4>
+                <p class="black">اسود</p>
+                <p>بيقول نيأا بدل نيقا</p>
+                <span>السعر : 500 ريال</span>
+            </div>
+        </div>
+        <div class="card">
+            <img src="img/عمر.png" alt="">
+            <div class="text">
+                <h4>عمر</h4>
+                <p class="white">ابيض</p>
+                <p>بعرف يلعب كورة</p>
                 <span>السعر : 500 ريال</span>
             </div>
         </div>
