--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
             <div class="text">
                 <h4>كريم</h4>
                 <p class="white">ابيض</p>
-                <p>.....</p>
+                <p>بيعرف يكرع</p>
                 <span>السعر : 500 ريال</span>
             </div>
         </div>
